--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_app_check: ^0.2.1+13
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
