--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
   animated_text_kit: ^4.2.2
+  flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
