--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   freezed: ^2.4.5
   json_serializable: ^6.7.1
   very_good_analysis: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
