--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.shatapp</string>
+	<string>it.venturini.shatapp</string>
 	<key>PROJECT_ID</key>
 	<string>shatapp-930a6</string>
 	<key>STORAGE_BUCKET</key>
