--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -15,24 +15,24 @@ flutter_native_splash:
   # Use background_image to set the background of your splash screen to a png image.
   # This is useful for gradients. The image will be stretch to the size of the app.
   # Only one parameter can be used, color and background_image cannot both be set.
-  #color: "#FFFFFF"
-  background_image: "assets/images/gradient.png"
+  color: "#FFFFFF"
+  #background_image: "assets/images/gradient.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  #image: assets/splash.png
+  image: assets/images/poo.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
-  branding: assets/images/poo.png
+  #branding: assets/images/poo.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
-  branding_mode: bottom
+  #branding_mode: bottom
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
